Fix(frontend): favicon via public (corrige referência /src em produção)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mapa Social</title>
-    <link rel="icon" type="image/png" href="/src/assets/icons/map.png" />
+    <!-- Favicon deve estar em public/; usar o vite.svg padrão para já corrigir -->
+    <link rel="icon" href="/vite.svg" />
   </head>
 
   <body>
